cookie-crafter-frontend/src/components/footer.css
footer {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 1rem;
  margin-top: 1.5rem;
  color: var(--gray);
  font-size: 0.875rem;
}

footer > section {
  display: flex;
}

footer section:not(:last-child)::after {
  content: '|';
  margin-left: 1rem;
}

footer .about-button {
  background: none;
  border: none;
  cursor: pointer;
  padding: 0;
  margin: 0;
  color: inherit;
}

footer .about-button:hover {
  text-decoration: underline;
}

.about-modal-content {
  display: flex;
  gap: 2rem;
  justify-content: center;
  align-items: center;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  position: absolute;
  margin: 2rem;

  /* Hide scrollbar */
  overflow-y: scroll;
  scrollbar-width: none; /* Firefox */
  -ms-overflow-style: none; /* Internet Explorer 10+ */
}

.cookie-crafter-logo-big {
  height: 39%;
}

@media screen and (max-width: 37.5rem) {
  footer {
    flex-direction: column;
    gap: 0.5rem;
  }

  footer section:not(:last-child)::after {
    content: none;
    margin-left: 0;
  }
}

@media screen and (max-width: 48.75rem) {
  .about-modal-content {
    flex-direction: column;
  }

  .about-modal-content .image-wrap {
    width: 70%;
  }

  .cookie-crafter-logo-big {
    height: 100%;
  }

  .about-modal-content__text ul {
    /* without it, list markers become invisible - ancestor's overflow hides them */
    list-style-position: inside;
  }
}

